--- a/libararysystem/LibararySystem/program/LibararySystemDemo/LibararySystemDemo/App.config
+++ b/libararysystem/LibararySystem/program/LibararySystemDemo/LibararySystemDemo/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<connectionStrings>
-		<add name="default" connectionString="Server=.;Database=LibararySystem;User Id =sa87;PassWord= sa87;"/>
+		<add name="default" connectionString="Server=.;Database=LibararySystem1;User Id =sa10;PassWord= sa10;"/>
 	</connectionStrings>
 </configuration>
