--- a/libararysystem/LibararySystem/program/LibararySystemDemo/LibararySystemDemo/LibararySystemDemo.csproj
+++ b/libararysystem/LibararySystem/program/LibararySystemDemo/LibararySystemDemo/LibararySystemDemo.csproj
@@ -36,7 +36,12 @@
     <Reference Include="ISpan.Utility">
       <HintPath>..\..\..\..\class_content\11_10\ispantest\ISpan.Utility\bin\Debug\ISpan.Utility.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Build.Framework" />
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -49,23 +54,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Books.cs">
+    <Compile Include="BooksForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Books.Designer.cs">
-      <DependentUpon>Books.cs</DependentUpon>
+    <Compile Include="BooksForm.Designer.cs">
+      <DependentUpon>BooksForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="BookCategory.cs">
+    <Compile Include="BookCategoryForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BookCategory.Designer.cs">
-      <DependentUpon>BookCategory.cs</DependentUpon>
+    <Compile Include="BookCategoryForm.Designer.cs">
+      <DependentUpon>BookCategoryForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="CreatBooks.cs">
+    <Compile Include="CreateBooks.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CreatBooks.Designer.cs">
-      <DependentUpon>CreatBooks.cs</DependentUpon>
+    <Compile Include="CreateBooks.Designer.cs">
+      <DependentUpon>CreateBooks.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CreateBooksCategoryform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateBooksCategoryform.Designer.cs">
+      <DependentUpon>CreateBooksCategoryform.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CreateUserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateUserForm.Designer.cs">
+      <DependentUpon>CreateUserForm.cs</DependentUpon>
     </Compile>
     <Compile Include="EditBookCategory.cs">
       <SubType>Form</SubType>
@@ -73,32 +90,102 @@
     <Compile Include="EditBookCategory.Designer.cs">
       <DependentUpon>EditBookCategory.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditBookCategoryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditBookCategoryForm.Designer.cs">
+      <DependentUpon>EditBookCategoryForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditBooksForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditBooksForm.Designer.cs">
+      <DependentUpon>EditBooksForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditUserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditUserForm.Designer.cs">
+      <DependentUpon>EditUserForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="extensiontool\stringextension.cs" />
+    <Compile Include="infraa\DAOs\UserDAO.cs" />
+    <Compile Include="infraa\ValidationHelper.cs" />
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="model\dataindex\BooksView.cs" />
     <Compile Include="model\dataindex\BookCategoryIndexView.cs" />
+    <Compile Include="model\dataindex\LoginVM.cs" />
+    <Compile Include="model\dataindex\UserIndexVM.cs" />
+    <Compile Include="model\DTOS\UserDTO.cs" />
+    <Compile Include="model\Services\UserService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="UsersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UsersForm.Designer.cs">
+      <DependentUpon>UsersForm.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.BookCategoryIndexView.datasource" />
     <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.BookCategoryIndexView1.datasource" />
     <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.BookCategoryView.datasource" />
     <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.BookClassIndexView.datasource" />
+    <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.BooksshowView.datasource" />
     <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.BooksView.datasource" />
+    <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.UserIndexVM.datasource" />
     <None Include="Properties\DataSources\Program.datasource" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Books.resx">
-      <DependentUpon>Books.cs</DependentUpon>
+    <EmbeddedResource Include="BooksForm.resx">
+      <DependentUpon>BooksForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="BookCategory.resx">
-      <DependentUpon>BookCategory.cs</DependentUpon>
+    <EmbeddedResource Include="BookCategoryForm.resx">
+      <DependentUpon>BookCategoryForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CreatBooks.resx">
-      <DependentUpon>CreatBooks.cs</DependentUpon>
+    <EmbeddedResource Include="CreateBooks.resx">
+      <DependentUpon>CreateBooks.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreateBooksCategoryform.resx">
+      <DependentUpon>CreateBooksCategoryform.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreateUserForm.resx">
+      <DependentUpon>CreateUserForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditBookCategory.resx">
+      <DependentUpon>EditBookCategory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditBooksForm.resx">
+      <DependentUpon>EditBooksForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditUserForm.resx">
+      <DependentUpon>EditUserForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UsersForm.resx">
+      <DependentUpon>UsersForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
