--- a/libararysystem/LibararySystem/program/LibararySystemDemo/LibararySystemDemo/LibararySystemDemo.csproj
+++ b/libararysystem/LibararySystem/program/LibararySystemDemo/LibararySystemDemo/LibararySystemDemo.csproj
@@ -111,6 +111,12 @@
     <Compile Include="extensiontool\stringextension.cs" />
     <Compile Include="infraa\DAOs\UserDAO.cs" />
     <Compile Include="infraa\ValidationHelper.cs" />
+    <Compile Include="LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +146,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\LibararySystemDemo.infraa.DAOs.UserDAO.datasource" />
     <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.BookCategoryIndexView.datasource" />
     <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.BookCategoryIndexView1.datasource" />
     <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.BookCategoryView.datasource" />
@@ -147,6 +154,7 @@
     <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.BooksshowView.datasource" />
     <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.BooksView.datasource" />
     <None Include="Properties\DataSources\LibararySystemDemo.model.dataindex.UserIndexVM.datasource" />
+    <None Include="Properties\DataSources\LibararySystemDemo.model.DTOS.UserDTO.datasource" />
     <None Include="Properties\DataSources\Program.datasource" />
   </ItemGroup>
   <ItemGroup>
@@ -174,6 +182,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EditUserForm.resx">
       <DependentUpon>EditUserForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
